--- a/pom.xml
+++ b/pom.xml
@@ -49,21 +49,11 @@
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
 			</plugin>
-			<plugin>
+			<!--plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
-			</plugin>
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>8.1.9.v20130131</version>
-				<configuration>
-					<webAppConfig>
-						<contextPath>/${project.name}</contextPath>
-					</webAppConfig>
-				</configuration>
-			</plugin>
+			</plugin-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>selenium-maven-plugin</artifactId>
@@ -87,23 +77,21 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.0.2</version>
 				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.eclipse.jetty</groupId>
-									<artifactId>jetty-runner</artifactId>
-									<version>9.2.7.v20150116</version>
-									<destFileName>jetty-runner.jar</destFileName>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
+                	<execution>
+                    	<phase>package</phase>
+                    	<goals><goal>copy</goal></goals>
+                    	<configuration>
+                        	<artifactItems>
+                            	<artifactItem>
+                                	<groupId>com.github.jsimone</groupId>
+                                	<artifactId>webapp-runner</artifactId>
+                                	<version>8.5.11.3</version>
+                                	<destFileName>webapp-runner.jar</destFileName>
+                            	</artifactItem>
+                        	</artifactItems>
+                    	</configuration>
+                	</execution>
+            	</executions>
 			</plugin>
 		</plugins>
 	</build>
