--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,42 @@
 		<org.aspectj-version>1.7.4</org.aspectj-version>
 		<org.slf4j-version>1.7.25</org.slf4j-version>
 		<hibernate.version>4.3.11.Final</hibernate.version>
+		<surefire-argLine></surefire-argLine>
+    	<surefire-it-argLine></surefire-it-argLine>
+    	<surefireProjectArgLine></surefireProjectArgLine>
 	</properties>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.20.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
+			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-surefire-plugin</artifactId>
+        		<configuration>
+          			<includes>
+            			<include>**/*Test.java</include>
+            			<include>**/TEST_*.java</include>
+          			</includes>
+          			<excludes>
+            			<exclude>**/*IntegrationTest.java</exclude>
+          			</excludes>
+          			<failIfNoTests>false</failIfNoTests>
+          			<useFile>false</useFile>
+          			<argLine>${surefire-argLine} ${surefireProjectArgLine}</argLine>
+          			<systemPropertyVariables>
+            			<net.sourceforge.cobertura.datafile>target/cobertura/cobertura.ser</net.sourceforge.cobertura.datafile>
+            			<cobertura.use.java.nio>false</cobertura.use.java.nio>
+          			</systemPropertyVariables>
+        		</configuration>
+      		</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -43,34 +75,6 @@
 				<configuration>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
-			</plugin>
-			<!--plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-			</plugin-->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>selenium-maven-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<browser>*firefox</browser>
-					<suite>src/main/webapp/selenium/test-suite.xhtml</suite>
-					<results>${project.build.directory}/selenium.html</results>
-					<startURL>http://localhost:4444/</startURL>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.seleniumhq.selenium</groupId>
-						<artifactId>selenium-server</artifactId>
-						<version>3.5.3</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -114,6 +118,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework-version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -206,8 +216,8 @@
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
